--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ go.work.sum
 
 # env file
 .env
+.env.local
+.env.production
+.env.staging
 
 # Editor/IDE
 # .idea/
@@ -33,3 +36,4 @@ go.work.sum
 
 # Database files
 *.db
+
