feat: add treasury integration and logging

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,17 @@ PORT=8080
 DB_PATH=transactions.db
 
 # Treasury API Configuration
-TREASURY_BASE_URL=https://api.fiscaldata.treasury.gov/services/api/v1/accounting/od/rates_of_exchange
+TREASURY_BASE_URL=https://api.fiscaldata.treasury.gov/services/api/fiscal_service/v1/accounting/od/rates_of_exchange
 TREASURY_TIMEOUT_SECONDS=30
 
+# Logging Configuration
+LOG_LEVEL=INFO
+LOG_FORMAT=json
+
 # Environment
-GO_ENV=development
+ENVIRONMENT=development
+
+# Examples for different environments:
+# Development: LOG_LEVEL=DEBUG, LOG_FORMAT=text, ENVIRONMENT=development
+# Production:  LOG_LEVEL=INFO,  LOG_FORMAT=json, ENVIRONMENT=production
+# Testing:     LOG_LEVEL=WARN,  LOG_FORMAT=text, ENVIRONMENT=test
