doc: add note about runing app with docker

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 PORT=8080
 
 # Database Configuration  
+# For local development: transactions.db
+# For Docker: /app/data/transactions.db
 DB_PATH=transactions.db
 
 # Treasury API Configuration
